# life

./: .gitignore  CMakeLists.txt  README.md
Life/: Grid.cpp  Grid.h  Life.cpp  Renderer.cpp  Renderer.h  ShaderLoader.h  Types.h  World.cpp  World.h
Life/glad/: glad.c  glad.h
archive/: GLImageLoader.cpp  GLImageLoader.h  ImageLoader.cpp  ImageLoader.h  README.txt  openpng.h
assets/: chars.dds  chars.psd  fragment.glsl  readme.txt  tileset.dds  tileset.psd  vertex.glsl
src/: atlas.c  atlas.h  error_logs.h  grid.c  grid.h  life.c  life_gui.c  life_gui.h  world.c  world.h
src/not-actually-going-to-use-this/: atlas.c  atlas.h
